Fix about dialog margins on mobile

--- a/src/app/public/styles.css
+++ b/src/app/public/styles.css
@@ -178,7 +178,7 @@ a {
   width: 90%;
   max-width: 500px;
   padding: 32px;
-  margin: 64px;
+  margin: 16px;
   text-align: center;
   position: relative;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
